# emergence-hackathon-info

./: .env.example  DEMO-SCRIPT.md  PRODUCT.md  PROMISE-ENGINE.md  README.md  SESSION-SUMMARY.md  build-plan-mispricing-auditor.md  craft_databases.md  devpost-enterprise-agents-hackathon.md  luma-ai-healthcare-hack-nyc.md  luma-emergence-x-nebius.md  nebius-hackathon-prerequisites.md  project-ideas.html  project-ideas.md  pyproject.toml  research-oss-repos-ranked.md  research-starter-repos.md  sponsor-env-vars.md
docs/superpowers/plans/: 2026-07-11-promise-engine.md
docs/superpowers/specs/: 2026-07-11-promise-engine-design.md  2026-07-11-the-trap-design.md
fixtures/: churn.json  lanes.json  manifest.json  review_damage.json  seasonality.json  seller_handling.json  seller_lateness.json  state_transit.json
src/promise_engine/: cli.py  models.py
src/promise_engine/agent/: loop.py  narrative.py  tools.py
src/promise_engine/analysis/: hypotheses.py  lanes.py  promise.py  season.py  trap.py  verdict.py
src/promise_engine/api/: app.py
src/promise_engine/craft/: cassette.py  questions.py
tests/: test_cassette.py  test_hypotheses.py  test_lanes.py  test_models.py  test_narrative_guard.py  test_promise.py  test_season.py  test_verdict.py
web/: app.js  index.html  style.css
web/assets/: brazil-states.min.json
web/js/: app.js  fx.js  map3d.js  sections.js  trail.js
