[project]
name = "promise-engine"
version = "0.1.0"
description = "An agent that decides the delivery date a marketplace can actually keep"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.55",
    "rich>=13.9",
    "pydantic>=2.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promise_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
